--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,7 +32,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>191</width>
+      <width>151</width>
       <height>211</height>
      </rect>
     </property>
@@ -147,7 +147,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>Loss:</string>
     </property>
    </widget>
    <widget class="QLabel" name="accLabel">
@@ -160,7 +160,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>Accuracy:</string>
     </property>
    </widget>
    <zorder>layoutWidget</zorder>
@@ -175,7 +175,7 @@
      <x>0</x>
      <y>0</y>
      <width>692</width>
-     <height>19</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuOpen_dataset">
