--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>160</x>
       <y>10</y>
       <width>80</width>
       <height>23</height>
@@ -32,7 +32,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>151</width>
+      <width>121</width>
       <height>211</height>
      </rect>
     </property>
@@ -140,7 +140,7 @@
    <widget class="QLabel" name="lossLabel">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>160</x>
       <y>40</y>
       <width>261</width>
       <height>16</height>
@@ -153,7 +153,7 @@
    <widget class="QLabel" name="accLabel">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>160</x>
       <y>70</y>
       <width>261</width>
       <height>16</height>
@@ -166,7 +166,7 @@
    <widget class="QPushButton" name="stopButton">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>250</x>
       <y>10</y>
       <width>80</width>
       <height>23</height>
@@ -179,7 +179,7 @@
    <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>340</x>
       <y>10</y>
       <width>80</width>
       <height>23</height>
@@ -192,10 +192,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>160</x>
       <y>110</y>
       <width>261</width>
-      <height>112</height>
+      <height>116</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -241,13 +241,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>440</x>
       <y>10</y>
       <width>102</width>
-      <height>48</height>
+      <height>50</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -270,13 +270,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -296,13 +296,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>80</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -322,13 +322,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>140</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -348,13 +348,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>210</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -374,13 +374,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>280</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -400,13 +400,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>350</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -426,13 +426,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>420</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -452,13 +452,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>490</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -478,13 +478,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>560</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -504,13 +504,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>620</x>
       <y>310</y>
       <width>61</width>
-      <height>36</height>
+      <height>38</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -533,34 +533,22 @@
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>pushButton</zorder>
    <zorder>lossLabel</zorder>
    <zorder>accLabel</zorder>
-   <zorder>label</zorder>
-   <zorder>label_2</zorder>
-   <zorder>label_3</zorder>
-   <zorder>label_4</zorder>
-   <zorder>label_5</zorder>
-   <zorder>label_6</zorder>
-   <zorder>label_7</zorder>
-   <zorder>label_8</zorder>
-   <zorder>label_9</zorder>
-   <zorder>label_10</zorder>
    <zorder>stopButton</zorder>
    <zorder>resetButton</zorder>
-   <zorder>SVMRadioButton</zorder>
-   <zorder>SoftmaxRadioButton</zorder>
-   <zorder>labelPlaneScore</zorder>
-   <zorder>labelCarScore</zorder>
-   <zorder>labelBirdScore</zorder>
-   <zorder>labelCatScore</zorder>
-   <zorder>labelDeerScore</zorder>
-   <zorder>labelDogScore</zorder>
-   <zorder>labelFrogScore</zorder>
-   <zorder>labelHorseScore</zorder>
-   <zorder>labelShipScore</zorder>
-   <zorder>labelTruckScore</zorder>
-   <zorder></zorder>
+   <zorder>layoutWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -568,7 +556,7 @@
      <x>0</x>
      <y>0</y>
      <width>686</width>
-     <height>19</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
